--- a/package.json
+++ b/package.json
@@ -1,14 +1,11 @@
 {
-  "name": "react-typescript",
+  "name": "react-typescript-api",
   "version": "1.0.0",
-  "description": "React and TypeScript example starter project",
-  "keywords": [
-    "typescript",
-    "react",
-    "starter"
-  ],
+  "description": "",
+  "keywords": [],
   "main": "src/index.tsx",
   "dependencies": {
+    "axios": "0.27.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-scripts": "4.0.3"
